evine/grammar.output
Nonterminals useless in grammar

   Type
   Rel_Op


Terminals unused in grammar

   INTEGER
   BOOLEAN
   ARRAY
   SIZE
   ADN
   EQUAL
   DIFFER
   LESS_OR_EQUAL
   GREATER_OR_EQUAL
   "INTEGER"
   "BOOLEAN"
   "ARRAY"
   "SIZE"
   "<"
   ">"


Rules useless in grammar

   73 Type: "INTEGER"
   74     | "BOOLEAN"
   75     | "ARRAY" "SIZE" NUMBER

   76 Rel_Op: EQUAL
   77       | DIFFER
   78       | "<"
   79       | ">"
   80       | LESS_OR_EQUAL
   81       | GREATER_OR_EQUAL


Grammar

    0 $accept: Liss $end

    1 Liss: PROGRAM IDENTIFIER '{' Body '}'

    2 Body: DECLARATIONS Declarations STATEMENTS Statements

    3 Declarations: Declaration
    4             | Declaration Declarations

    5 Declaration: Variable_Declaration

    6 Variable_Declaration: Vars SETA "," Var

    7 Vars: Var
    8     | Vars "," Var

    9 Var: IDENTIFIER Value_Var

   10 Value_Var: /* empty */
   11          | '=' Inic_Var

   12 Inic_Var: Constant
   13         | Array_Definition

   14 Constant: NUMBER
   15         | STRING
   16         | TRUE
   17         | FALSE

   18 Array_Definition: "[" Array_Initialization "]"

   19 Array_Initialization: Elem
   20                     | Array_Initialization "," Elem

   21 Elem: NUMBER

   22 Statements: Statement ";"
   23           | Statements Statement ";"

   24 Statement: Turtle_Commands
   25          | Assignment
   26          | Conditional_Statement
   27          | Iterative_Statement

   28 Turtle_Commands: Step
   29                | Rotate
   30                | Mode
   31                | Dialogue
   32                | Location

   33 Step: FORWARD Expression
   34     | BACKWARD Expression

   35 Rotate: RRIGHT
   36       | RLEFT

   37 Mode: PEN UP
   38     | PEN DOWN

   39 Dialogue: Say_Statement
   40         | Ask_Statement

   41 Location: GOTO NUMBER "," NUMBER
   42         | WHERE "?"

   43 Assignment: Variable "=" Expression

   44 Variable: IDENTIFIER Array_Acess

   45 Array_Acess: "[" Single_Expression "]"

   46 Expression: Single_Expression
   47           | Expression Single_Expression

   48 Single_Expression: Term
   49                  | Single_Expression Add_Op Term

   50 Term: Factor
   51     | Term Mul_Op Factor

   52 Factor: Constant
   53       | Variable
   54       | SuccOrPred
   55       | "(" Expression ")"

   56 Add_Op: "+"
   57       | "-"
   58       | OR

   59 Mul_Op: "*"
   60       | "/"
   61       | AND
   62       | EXPONENTIAL

   63 SuccOrPred: SuccPred IDENTIFIER

   64 SuccPred: SUCC
   65         | PRED

   66 Say_Statement: SAY "(" Expression ")"

   67 Ask_Statement: ASK "(" STRING "," Variable ")"

   68 Conditional_Statement: IfThenElse_Stat

   69 Iterative_Statement: While_Stat

   70 IfThenElse_Stat: IF Expression THEN "{" Statements "}" Else_Expression

   71 Else_Expression: ELSE "{" Statements "}"

   72 While_Stat: WHILE "(" Expression ")" "{" Statements "}"


Terminals, with rules where they appear

$end (0) 0
'=' (61) 11
'{' (123) 1
'}' (125) 1
error (256)
PROGRAM (258) 1
DECLARATIONS (259) 2
STATEMENTS (260) 2
INTEGER (261)
BOOLEAN (262)
ARRAY (263)
SIZE (264)
TRUE (265) 16
FALSE (266) 17
FORWARD (267) 33
BACKWARD (268) 34
RRIGHT (269) 35
RLEFT (270) 36
PEN (271) 37 38
UP (272) 37
DOWN (273) 38
GOTO (274) 41
ADN (275)
OR (276) 58
EXPONENTIAL (277) 62
SUCC (278) 64
PRED (279) 65
SAY (280) 66
ASK (281) 67
IF (282) 70
THEN (283) 70
ELSE (284) 71
WHILE (285) 72
EQUAL (286)
DIFFER (287)
LESS_OR_EQUAL (288)
GREATER_OR_EQUAL (289)
AND (290) 61
SETA (291) 6
WHERE (292) 42
NUMBER (293) 14 21 41
STRING (294) 15 67
IDENTIFIER (295) 1 9 44 63
"," (296) 6 8 20 41 67
"INTEGER" (297)
"BOOLEAN" (298)
"ARRAY" (299)
"SIZE" (300)
"[" (301) 18 45
"]" (302) 18 45
";" (303) 22 23
"?" (304) 42
"=" (305) 43
"(" (306) 55 66 67 72
")" (307) 55 66 67 72
"+" (308) 56
"-" (309) 57
"*" (310) 59
"/" (311) 60
"<" (312)
">" (313)
"{" (314) 70 71 72
"}" (315) 70 71 72


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
Liss (65)
    on left: 1, on right: 0
Body (66)
    on left: 2, on right: 1
Declarations (67)
    on left: 3 4, on right: 2 4
Declaration (68)
    on left: 5, on right: 3 4
Variable_Declaration (69)
    on left: 6, on right: 5
Vars (70)
    on left: 7 8, on right: 6 8
Var (71)
    on left: 9, on right: 6 7 8
Value_Var (72)
    on left: 10 11, on right: 9
Inic_Var (73)
    on left: 12 13, on right: 11
Constant (74)
    on left: 14 15 16 17, on right: 12 52
Array_Definition (75)
    on left: 18, on right: 13
Array_Initialization (76)
    on left: 19 20, on right: 18 20
Elem (77)
    on left: 21, on right: 19 20
Statements (78)
    on left: 22 23, on right: 2 23 70 71 72
Statement (79)
    on left: 24 25 26 27, on right: 22 23
Turtle_Commands (80)
    on left: 28 29 30 31 32, on right: 24
Step (81)
    on left: 33 34, on right: 28
Rotate (82)
    on left: 35 36, on right: 29
Mode (83)
    on left: 37 38, on right: 30
Dialogue (84)
    on left: 39 40, on right: 31
Location (85)
    on left: 41 42, on right: 32
Assignment (86)
    on left: 43, on right: 25
Variable (87)
    on left: 44, on right: 43 53 67
Array_Acess (88)
    on left: 45, on right: 44
Expression (89)
    on left: 46 47, on right: 33 34 43 47 55 66 70 72
Single_Expression (90)
    on left: 48 49, on right: 45 46 47 49
Term (91)
    on left: 50 51, on right: 48 49 51
Factor (92)
    on left: 52 53 54 55, on right: 50 51
Add_Op (93)
    on left: 56 57 58, on right: 49
Mul_Op (94)
    on left: 59 60 61 62, on right: 51
SuccOrPred (95)
    on left: 63, on right: 54
SuccPred (96)
    on left: 64 65, on right: 63
Say_Statement (97)
    on left: 66, on right: 39
Ask_Statement (98)
    on left: 67, on right: 40
Conditional_Statement (99)
    on left: 68, on right: 26
Iterative_Statement (100)
    on left: 69, on right: 27
IfThenElse_Stat (101)
    on left: 70, on right: 68
Else_Expression (102)
    on left: 71, on right: 70
While_Stat (103)
    on left: 72, on right: 69


state 0

    0 $accept: . Liss $end

    PROGRAM  shift, and go to state 1

    Liss  go to state 2


state 1

    1 Liss: PROGRAM . IDENTIFIER '{' Body '}'

    IDENTIFIER  shift, and go to state 3


state 2

    0 $accept: Liss . $end

    $end  shift, and go to state 4


state 3

    1 Liss: PROGRAM IDENTIFIER . '{' Body '}'

    '{'  shift, and go to state 5


state 4

    0 $accept: Liss $end .

    $default  accept


state 5

    1 Liss: PROGRAM IDENTIFIER '{' . Body '}'

    DECLARATIONS  shift, and go to state 6

    Body  go to state 7


state 6

    2 Body: DECLARATIONS . Declarations STATEMENTS Statements

    IDENTIFIER  shift, and go to state 8

    Declarations          go to state 9
    Declaration           go to state 10
    Variable_Declaration  go to state 11
    Vars                  go to state 12
    Var                   go to state 13


state 7

    1 Liss: PROGRAM IDENTIFIER '{' Body . '}'

    '}'  shift, and go to state 14


state 8

    9 Var: IDENTIFIER . Value_Var

    '='  shift, and go to state 15

    $default  reduce using rule 10 (Value_Var)

    Value_Var  go to state 16


state 9

    2 Body: DECLARATIONS Declarations . STATEMENTS Statements

    STATEMENTS  shift, and go to state 17


state 10

    3 Declarations: Declaration .
    4             | Declaration . Declarations

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 3 (Declarations)

    Declarations          go to state 18
    Declaration           go to state 10
    Variable_Declaration  go to state 11
    Vars                  go to state 12
    Var                   go to state 13


state 11

    5 Declaration: Variable_Declaration .

    $default  reduce using rule 5 (Declaration)


state 12

    6 Variable_Declaration: Vars . SETA "," Var
    8 Vars: Vars . "," Var

    SETA  shift, and go to state 19
    ","   shift, and go to state 20


state 13

    7 Vars: Var .

    $default  reduce using rule 7 (Vars)


state 14

    1 Liss: PROGRAM IDENTIFIER '{' Body '}' .

    $default  reduce using rule 1 (Liss)


state 15

   11 Value_Var: '=' . Inic_Var

    TRUE    shift, and go to state 21
    FALSE   shift, and go to state 22
    NUMBER  shift, and go to state 23
    STRING  shift, and go to state 24
    "["     shift, and go to state 25

    Inic_Var          go to state 26
    Constant          go to state 27
    Array_Definition  go to state 28


state 16

    9 Var: IDENTIFIER Value_Var .

    $default  reduce using rule 9 (Var)


state 17

    2 Body: DECLARATIONS Declarations STATEMENTS . Statements

    FORWARD     shift, and go to state 29
    BACKWARD    shift, and go to state 30
    RRIGHT      shift, and go to state 31
    RLEFT       shift, and go to state 32
    PEN         shift, and go to state 33
    GOTO        shift, and go to state 34
    SAY         shift, and go to state 35
    ASK         shift, and go to state 36
    IF          shift, and go to state 37
    WHILE       shift, and go to state 38
    WHERE       shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    Statements             go to state 41
    Statement              go to state 42
    Turtle_Commands        go to state 43
    Step                   go to state 44
    Rotate                 go to state 45
    Mode                   go to state 46
    Dialogue               go to state 47
    Location               go to state 48
    Assignment             go to state 49
    Variable               go to state 50
    Say_Statement          go to state 51
    Ask_Statement          go to state 52
    Conditional_Statement  go to state 53
    Iterative_Statement    go to state 54
    IfThenElse_Stat        go to state 55
    While_Stat             go to state 56


state 18

    4 Declarations: Declaration Declarations .

    $default  reduce using rule 4 (Declarations)


state 19

    6 Variable_Declaration: Vars SETA . "," Var

    ","  shift, and go to state 57


state 20

    8 Vars: Vars "," . Var

    IDENTIFIER  shift, and go to state 8

    Var  go to state 58


state 21

   16 Constant: TRUE .

    $default  reduce using rule 16 (Constant)


state 22

   17 Constant: FALSE .

    $default  reduce using rule 17 (Constant)


state 23

   14 Constant: NUMBER .

    $default  reduce using rule 14 (Constant)


state 24

   15 Constant: STRING .

    $default  reduce using rule 15 (Constant)


state 25

   18 Array_Definition: "[" . Array_Initialization "]"

    NUMBER  shift, and go to state 59

    Array_Initialization  go to state 60
    Elem                  go to state 61


state 26

   11 Value_Var: '=' Inic_Var .

    $default  reduce using rule 11 (Value_Var)


state 27

   12 Inic_Var: Constant .

    $default  reduce using rule 12 (Inic_Var)


state 28

   13 Inic_Var: Array_Definition .

    $default  reduce using rule 13 (Inic_Var)


state 29

   33 Step: FORWARD . Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 67
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 30

   34 Step: BACKWARD . Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 73
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 31

   35 Rotate: RRIGHT .

    $default  reduce using rule 35 (Rotate)


state 32

   36 Rotate: RLEFT .

    $default  reduce using rule 36 (Rotate)


state 33

   37 Mode: PEN . UP
   38     | PEN . DOWN

    UP    shift, and go to state 74
    DOWN  shift, and go to state 75


state 34

   41 Location: GOTO . NUMBER "," NUMBER

    NUMBER  shift, and go to state 76


state 35

   66 Say_Statement: SAY . "(" Expression ")"

    "("  shift, and go to state 77


state 36

   67 Ask_Statement: ASK . "(" STRING "," Variable ")"

    "("  shift, and go to state 78


state 37

   70 IfThenElse_Stat: IF . Expression THEN "{" Statements "}" Else_Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 79
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 38

   72 While_Stat: WHILE . "(" Expression ")" "{" Statements "}"

    "("  shift, and go to state 80


state 39

   42 Location: WHERE . "?"

    "?"  shift, and go to state 81


state 40

   44 Variable: IDENTIFIER . Array_Acess

    "["  shift, and go to state 82

    Array_Acess  go to state 83


state 41

    2 Body: DECLARATIONS Declarations STATEMENTS Statements .
   23 Statements: Statements . Statement ";"

    FORWARD     shift, and go to state 29
    BACKWARD    shift, and go to state 30
    RRIGHT      shift, and go to state 31
    RLEFT       shift, and go to state 32
    PEN         shift, and go to state 33
    GOTO        shift, and go to state 34
    SAY         shift, and go to state 35
    ASK         shift, and go to state 36
    IF          shift, and go to state 37
    WHILE       shift, and go to state 38
    WHERE       shift, and go to state 39
    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 2 (Body)

    Statement              go to state 84
    Turtle_Commands        go to state 43
    Step                   go to state 44
    Rotate                 go to state 45
    Mode                   go to state 46
    Dialogue               go to state 47
    Location               go to state 48
    Assignment             go to state 49
    Variable               go to state 50
    Say_Statement          go to state 51
    Ask_Statement          go to state 52
    Conditional_Statement  go to state 53
    Iterative_Statement    go to state 54
    IfThenElse_Stat        go to state 55
    While_Stat             go to state 56


state 42

   22 Statements: Statement . ";"

    ";"  shift, and go to state 85


state 43

   24 Statement: Turtle_Commands .

    $default  reduce using rule 24 (Statement)


state 44

   28 Turtle_Commands: Step .

    $default  reduce using rule 28 (Turtle_Commands)


state 45

   29 Turtle_Commands: Rotate .

    $default  reduce using rule 29 (Turtle_Commands)


state 46

   30 Turtle_Commands: Mode .

    $default  reduce using rule 30 (Turtle_Commands)


state 47

   31 Turtle_Commands: Dialogue .

    $default  reduce using rule 31 (Turtle_Commands)


state 48

   32 Turtle_Commands: Location .

    $default  reduce using rule 32 (Turtle_Commands)


state 49

   25 Statement: Assignment .

    $default  reduce using rule 25 (Statement)


state 50

   43 Assignment: Variable . "=" Expression

    "="  shift, and go to state 86


state 51

   39 Dialogue: Say_Statement .

    $default  reduce using rule 39 (Dialogue)


state 52

   40 Dialogue: Ask_Statement .

    $default  reduce using rule 40 (Dialogue)


state 53

   26 Statement: Conditional_Statement .

    $default  reduce using rule 26 (Statement)


state 54

   27 Statement: Iterative_Statement .

    $default  reduce using rule 27 (Statement)


state 55

   68 Conditional_Statement: IfThenElse_Stat .

    $default  reduce using rule 68 (Conditional_Statement)


state 56

   69 Iterative_Statement: While_Stat .

    $default  reduce using rule 69 (Iterative_Statement)


state 57

    6 Variable_Declaration: Vars SETA "," . Var

    IDENTIFIER  shift, and go to state 8

    Var  go to state 87


state 58

    8 Vars: Vars "," Var .

    $default  reduce using rule 8 (Vars)


state 59

   21 Elem: NUMBER .

    $default  reduce using rule 21 (Elem)


state 60

   18 Array_Definition: "[" Array_Initialization . "]"
   20 Array_Initialization: Array_Initialization . "," Elem

    ","  shift, and go to state 88
    "]"  shift, and go to state 89


state 61

   19 Array_Initialization: Elem .

    $default  reduce using rule 19 (Array_Initialization)


state 62

   64 SuccPred: SUCC .

    $default  reduce using rule 64 (SuccPred)


state 63

   65 SuccPred: PRED .

    $default  reduce using rule 65 (SuccPred)


state 64

   55 Factor: "(" . Expression ")"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 90
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 65

   52 Factor: Constant .

    $default  reduce using rule 52 (Factor)


state 66

   53 Factor: Variable .

    $default  reduce using rule 53 (Factor)


state 67

   33 Step: FORWARD Expression .
   47 Expression: Expression . Single_Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    $default  reduce using rule 33 (Step)

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 68

   46 Expression: Single_Expression .
   49 Single_Expression: Single_Expression . Add_Op Term

    OR   shift, and go to state 92
    "+"  shift, and go to state 93
    "-"  shift, and go to state 94

    $default  reduce using rule 46 (Expression)

    Add_Op  go to state 95


state 69

   48 Single_Expression: Term .
   51 Term: Term . Mul_Op Factor

    EXPONENTIAL  shift, and go to state 96
    AND          shift, and go to state 97
    "*"          shift, and go to state 98
    "/"          shift, and go to state 99

    $default  reduce using rule 48 (Single_Expression)

    Mul_Op  go to state 100


state 70

   50 Term: Factor .

    $default  reduce using rule 50 (Term)


state 71

   54 Factor: SuccOrPred .

    $default  reduce using rule 54 (Factor)


state 72

   63 SuccOrPred: SuccPred . IDENTIFIER

    IDENTIFIER  shift, and go to state 101


state 73

   34 Step: BACKWARD Expression .
   47 Expression: Expression . Single_Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    $default  reduce using rule 34 (Step)

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 74

   37 Mode: PEN UP .

    $default  reduce using rule 37 (Mode)


state 75

   38 Mode: PEN DOWN .

    $default  reduce using rule 38 (Mode)


state 76

   41 Location: GOTO NUMBER . "," NUMBER

    ","  shift, and go to state 102


state 77

   66 Say_Statement: SAY "(" . Expression ")"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 103
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 78

   67 Ask_Statement: ASK "(" . STRING "," Variable ")"

    STRING  shift, and go to state 104


state 79

   47 Expression: Expression . Single_Expression
   70 IfThenElse_Stat: IF Expression . THEN "{" Statements "}" Else_Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    THEN        shift, and go to state 105
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 80

   72 While_Stat: WHILE "(" . Expression ")" "{" Statements "}"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 106
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 81

   42 Location: WHERE "?" .

    $default  reduce using rule 42 (Location)


state 82

   45 Array_Acess: "[" . Single_Expression "]"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 107
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 83

   44 Variable: IDENTIFIER Array_Acess .

    $default  reduce using rule 44 (Variable)


state 84

   23 Statements: Statements Statement . ";"

    ";"  shift, and go to state 108


state 85

   22 Statements: Statement ";" .

    $default  reduce using rule 22 (Statements)


state 86

   43 Assignment: Variable "=" . Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant           go to state 65
    Variable           go to state 66
    Expression         go to state 109
    Single_Expression  go to state 68
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 87

    6 Variable_Declaration: Vars SETA "," Var .

    $default  reduce using rule 6 (Variable_Declaration)


state 88

   20 Array_Initialization: Array_Initialization "," . Elem

    NUMBER  shift, and go to state 59

    Elem  go to state 110


state 89

   18 Array_Definition: "[" Array_Initialization "]" .

    $default  reduce using rule 18 (Array_Definition)


state 90

   47 Expression: Expression . Single_Expression
   55 Factor: "(" Expression . ")"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64
    ")"         shift, and go to state 111

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 91

   47 Expression: Expression Single_Expression .
   49 Single_Expression: Single_Expression . Add_Op Term

    OR   shift, and go to state 92
    "+"  shift, and go to state 93
    "-"  shift, and go to state 94

    $default  reduce using rule 47 (Expression)

    Add_Op  go to state 95


state 92

   58 Add_Op: OR .

    $default  reduce using rule 58 (Add_Op)


state 93

   56 Add_Op: "+" .

    $default  reduce using rule 56 (Add_Op)


state 94

   57 Add_Op: "-" .

    $default  reduce using rule 57 (Add_Op)


state 95

   49 Single_Expression: Single_Expression Add_Op . Term

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant    go to state 65
    Variable    go to state 66
    Term        go to state 112
    Factor      go to state 70
    SuccOrPred  go to state 71
    SuccPred    go to state 72


state 96

   62 Mul_Op: EXPONENTIAL .

    $default  reduce using rule 62 (Mul_Op)


state 97

   61 Mul_Op: AND .

    $default  reduce using rule 61 (Mul_Op)


state 98

   59 Mul_Op: "*" .

    $default  reduce using rule 59 (Mul_Op)


state 99

   60 Mul_Op: "/" .

    $default  reduce using rule 60 (Mul_Op)


state 100

   51 Term: Term Mul_Op . Factor

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    Constant    go to state 65
    Variable    go to state 66
    Factor      go to state 113
    SuccOrPred  go to state 71
    SuccPred    go to state 72


state 101

   63 SuccOrPred: SuccPred IDENTIFIER .

    $default  reduce using rule 63 (SuccOrPred)


state 102

   41 Location: GOTO NUMBER "," . NUMBER

    NUMBER  shift, and go to state 114


state 103

   47 Expression: Expression . Single_Expression
   66 Say_Statement: SAY "(" Expression . ")"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64
    ")"         shift, and go to state 115

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 104

   67 Ask_Statement: ASK "(" STRING . "," Variable ")"

    ","  shift, and go to state 116


state 105

   70 IfThenElse_Stat: IF Expression THEN . "{" Statements "}" Else_Expression

    "{"  shift, and go to state 117


state 106

   47 Expression: Expression . Single_Expression
   72 While_Stat: WHILE "(" Expression . ")" "{" Statements "}"

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64
    ")"         shift, and go to state 118

    Constant           go to state 65
    Variable           go to state 66
    Single_Expression  go to state 91
    Term               go to state 69
    Factor             go to state 70
    SuccOrPred         go to state 71
    SuccPred           go to state 72


state 107

   45 Array_Acess: "[" Single_Expression . "]"
   49 Single_Expression: Single_Expression . Add_Op Term

    OR   shift, and go to state 92
    "]"  shift, and go to state 119
    "+"  shift, and go to state 93
    "-"  shift, and go to state 94

    Add_Op  go to state 95


state 108

   23 Statements: Statements Statement ";" .

    $default  reduce using rule 23 (Statements)


state 109

   43 Assignment: Variable "=" Expression .
   47 Expression: Expression . Single_Expression

    TRUE        shift, and go to state 21
    FALSE       shift, and go to state 22
    SUCC        shift, and go to state 62
    PRED        shift, and go to state 63
    NUMBER      shift, and go to state 23
    STRING      shift, and go to state 24
    IDENTIFIER  shift, and go to state 40
    "("         shift, and go to state 64

    $default  reduce using rule 43 (Assignment)
